--- a/src/components/StudentEnroll/student.scss
+++ b/src/components/StudentEnroll/student.scss
@@ -8,6 +8,7 @@
         width: 17px;
         height: 17px;
         border: 1px solid grey;
+        cursor: pointer;
     }
     .header{
         font-family: 'Mulish';
@@ -16,8 +17,12 @@
         font-size: 18px;
         letter-spacing: 0.2px;
         // padding: 0rem 0.3rem !important;
-        color: rgb(17, 50, 240);
+        color: rgb(141, 158, 252);
         border-radius: 10px;
+        span{
+            padding: 0rem 0.3rem !important;
+            overflow-x: scroll;
+        }
     }
     .hindrence{
         display: block;
