--- a/src/components/Courses/course.scss
+++ b/src/components/Courses/course.scss
@@ -39,6 +39,7 @@
                 // vertical-align: middle;
                 color: #404040;
                 border: none;
+                overflow-x: scroll;
                 // padding: 0rem 0.3rem !important;
                 white-space: nowrap;
                 padding-top: 7px !important;
