--- a/src/components/Todos/todo.scss
+++ b/src/components/Todos/todo.scss
@@ -21,6 +21,7 @@
                 font-family: 'Roboto Slab';
                 display: flex;
                 justify-content: center;
+                overflow-x: scroll;
                 align-items: center ;
                 vertical-align: middle;
                 color: #404040;
